--- a/src/main/java/ui/controllers/gui.fxml
+++ b/src/main/java/ui/controllers/gui.fxml
@@ -11,7 +11,7 @@
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.FXController">
    <children>
-      <MenuBar prefWidth="968.0">
+      <MenuBar fx:id="menuBar" prefWidth="968.0">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
