--- a/src/main/java/ui/controllers/gui.fxml
+++ b/src/main/java/ui/controllers/gui.fxml
@@ -15,9 +15,15 @@
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-                  <MenuItem fx:id="saveProject" mnemonicParsing="false" onAction="#saveEvolution" text="Save Project" />
+                  <MenuItem fx:id="newProject" mnemonicParsing="false" onAction="#addNewEATab" text="New Tab" />
+                  <MenuItem fx:id="duplicateTab" mnemonicParsing="false" onAction="#onDuplicateTab" text="Duplicate Tab" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem fx:id="openProject" mnemonicParsing="false" onAction="#openEvolution" text="Open" />
+                  <Menu fx:id="openRecent" mnemonicParsing="false" text="Open Recent" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
+                  <MenuItem fx:id="saveProject" mnemonicParsing="false" onAction="#saveEvolution" text="Save" />
                   <MenuItem fx:id="saveSettings" mnemonicParsing="false" onAction="#onSaveSettings" text="Save Settings" />
-                  <MenuItem fx:id="openProject" mnemonicParsing="false" onAction="#openEvolution" text="Open Project" />
+                  <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem fx:id="exportController" mnemonicParsing="false" onAction="#onExportController" text="Export Controller" />
               <MenuItem fx:id="closeButton" mnemonicParsing="false" onAction="#onClose" text="Close" />
             </items>
@@ -27,16 +33,27 @@
               <MenuItem mnemonicParsing="false" text="Delete" />
             </items>
           </Menu>
+            <Menu mnemonicParsing="false" text=" Connection">
+               <items>
+                  <MenuItem mnemonicParsing="false" text="Form New Connection" />
+               </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Report a Issue" />
+                  <MenuItem mnemonicParsing="false" text="About Evolver" />
+              </items>
+            </Menu>
         </menus>
       </MenuBar>
       <TabPane fx:id="EATabs" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="ALL_TABS" VBox.vgrow="ALWAYS">
         <tabs>
-            <Tab closable="false" text="System">
+            <Tab id="SYSTEM" closable="false" text="System">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
               </content>
             </Tab>
-            <Tab fx:id="addEAButton" closable="false" onSelectionChanged="#addTab" text="+">
+            <Tab id="NEW" fx:id="addEAButton" closable="false" onSelectionChanged="#addTab" text="+">
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
               </content>
