--- a/src/main/java/ui/controllers/eaTab.fxml
+++ b/src/main/java/ui/controllers/eaTab.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<SplitPane dividerPositions="0.5083612040133779" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
+<SplitPane dividerPositions="0.5100334448160535" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1">
   <items>
       <VBox maxWidth="300.0" prefWidth="240.0" spacing="10.0">
          <children>
@@ -17,7 +17,7 @@
                      <children>
                         <Button fx:id="startButton" mnemonicParsing="false" onAction="#onStartClicked" text="Start" />
                       <Button fx:id="clearButton" mnemonicParsing="false" onAction="#onClearClicked" text="Clear" />
-                        <Button fx:id="renderbutton" mnemonicParsing="false" text="Render" />
+                        <Button fx:id="renderButton" mnemonicParsing="false" onAction="#onRenderClicked" text="Render" />
                         <Button fx:id="graphClean" mnemonicParsing="false" onAction="#checkGraphClean" text="Clean" />
                      </children>
                   </HBox>
