--- a/src/main/java/ui/controllers/gui.fxml
+++ b/src/main/java/ui/controllers/gui.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.input.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.effect.*?>
@@ -52,19 +54,157 @@
         <tabs>
             <Tab id="SYSTEM" closable="false" text="System">
               <content>
-                  <SplitPane dividerPositions="0.3" prefHeight="160.0" prefWidth="200.0">
+                  <SplitPane dividerPositions="0.35" prefHeight="160.0" prefWidth="200.0">
                     <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+                           <children>
+                              <StackPane>
+                                 <children>
+                                    <Label text="Tabs" />
+                                 </children>
+                              </StackPane>
+                              <GridPane hgap="5.0" vgap="10.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                                       <children>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <Button mnemonicParsing="false" text="Start" />
+                                             </children>
+                                          </StackPane>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <MenuButton mnemonicParsing="false" text="Menu">
+                                                   <items>
+                                                      <MenuItem mnemonicParsing="false" text="Send To Server" />
+                                                      <Menu mnemonicParsing="false" text="Merge With...">
+                                                         <items>
+                                                            <MenuItem mnemonicParsing="false" text="EATab2" />
+                                                         </items>
+                                                      </Menu>
+                                                   </items>
+                                                   <opaqueInsets>
+                                                      <Insets />
+                                                   </opaqueInsets>
+                                                </MenuButton>
+                                             </children>
+                                          </StackPane>
+                                       </children>
+                                    </HBox>
+                                    <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
+                                       <children>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <Button mnemonicParsing="false" text="Start" />
+                                             </children>
+                                          </StackPane>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <MenuButton mnemonicParsing="false" text="Menu">
+                                                  <items>
+                                                    <MenuItem mnemonicParsing="false" text="Send To Server" />
+                                                      <Menu mnemonicParsing="false" text="Merge With...">
+                                                        <items>
+                                                          <MenuItem mnemonicParsing="false" text="EATab2" />
+                                                        </items>
+                                                      </Menu>
+                                                  </items>
+                                                   <opaqueInsets>
+                                                      <Insets />
+                                                   </opaqueInsets>
+                                                </MenuButton>
+                                             </children>
+                                          </StackPane>
+                                       </children>
+                                    </HBox>
+                                    <Line endX="100.0" stroke="#b4b4b4" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                                    <VBox prefHeight="200.0" prefWidth="100.0">
+                                       <children>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <Label text="EATab1" />
+                                             </children>
+                                          </StackPane>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <ProgressBar prefWidth="200.0" />
+                                             </children>
+                                          </StackPane>
+                                       </children>
+                                    </VBox>
+                                    <Line endX="100.0" stroke="#b4b4b4" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                                    <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
+                                       <children>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <Label text="EATab2" />
+                                             </children>
+                                          </StackPane>
+                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                             <children>
+                                                <ProgressBar prefWidth="200.0" />
+                                             </children>
+                                          </StackPane>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                                 <padding>
+                                    <Insets left="5.0" right="5.0" />
+                                 </padding>
+                              </GridPane>
+                           </children>
+                           <padding>
+                              <Insets top="5.0" />
+                           </padding>
+                        </VBox>
                         <SplitPane dividerPositions="0.8544152744630071" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
                           <items>
-                              <AreaChart fx:id="systemGraph" animated="false" createSymbols="false" title="System" verticalZeroLineVisible="false">
-                                <xAxis>
-                                  <NumberAxis side="BOTTOM" />
-                                </xAxis>
-                                <yAxis>
-                                  <NumberAxis side="LEFT" />
-                                </yAxis>
-                              </AreaChart>
+                              <GridPane>
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <AreaChart fx:id="memoryGraph" animated="false" createSymbols="false" title="Memory" verticalZeroLineVisible="false">
+                                      <xAxis>
+                                        <NumberAxis side="BOTTOM" />
+                                      </xAxis>
+                                      <yAxis>
+                                        <NumberAxis side="LEFT" />
+                                      </yAxis>
+                                    </AreaChart>
+                                    <AreaChart fx:id="cpuGraph" animated="false" createSymbols="false" title="CPU" verticalZeroLineVisible="false" GridPane.columnIndex="1">
+                                       <xAxis>
+                                          <NumberAxis side="BOTTOM" />
+                                       </xAxis>
+                                       <yAxis>
+                                          <NumberAxis side="LEFT" />
+                                       </yAxis>
+                                    </AreaChart>
+                                    <AreaChart fx:id="threadGraph" animated="false" createSymbols="false" title="Threads" verticalZeroLineVisible="false" GridPane.rowIndex="1">
+                                       <xAxis>
+                                          <NumberAxis side="BOTTOM" />
+                                       </xAxis>
+                                       <yAxis>
+                                          <NumberAxis side="LEFT" />
+                                       </yAxis>
+                                    </AreaChart>
+                                 </children>
+                              </GridPane>
                               <GridPane>
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
