--- a/src/main/java/ui/controllers/gui.fxml
+++ b/src/main/java/ui/controllers/gui.fxml
@@ -10,6 +10,8 @@
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
+<?import ui.controllers.custom.*?>
+
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.FXController">
    <children>
@@ -54,114 +56,117 @@
         <tabs>
             <Tab id="SYSTEM" closable="false" text="System">
               <content>
-                  <SplitPane dividerPositions="0.35" prefHeight="160.0" prefWidth="200.0">
+                  <SplitPane dividerPositions="0.396875" prefHeight="160.0" prefWidth="200.0">
                     <items>
-                        <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0">
+                        <VBox maxWidth="250.0" minWidth="200.0" prefHeight="250.0" prefWidth="200.0" spacing="10.0">
                            <children>
                               <StackPane>
                                  <children>
                                     <Label text="Tabs" />
                                  </children>
                               </StackPane>
-                              <GridPane hgap="5.0" vgap="10.0">
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                    <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                                 <children>
-                                    <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                              <ScrollPane fx:id="tabArea" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="SOMETIMES">
+                                 <content>
+                                    <GridPane gridLinesVisible="true" hgap="5.0" vgap="10.0">
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
                                        <children>
-                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                          <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                                              <children>
-                                                <Button mnemonicParsing="false" text="Start" />
-                                             </children>
-                                          </StackPane>
-                                          <StackPane prefHeight="150.0" prefWidth="200.0">
-                                             <children>
-                                                <MenuButton mnemonicParsing="false" text="Menu">
-                                                   <items>
-                                                      <MenuItem mnemonicParsing="false" text="Send To Server" />
-                                                      <Menu mnemonicParsing="false" text="Merge With...">
+                                                <StackPane prefHeight="150.0" prefWidth="200.0">
+                                                   <children>
+                                                      <Button mnemonicParsing="false" text="Start" />
+                                                   </children>
+                                                </StackPane>
+                                                <StackPane prefHeight="150.0" prefWidth="200.0">
+                                                   <children>
+                                                      <MenuButton mnemonicParsing="false" text="Menu">
                                                          <items>
-                                                            <MenuItem mnemonicParsing="false" text="EATab2" />
+                                                            <MenuItem mnemonicParsing="false" text="Send To Server" />
+                                                            <Menu mnemonicParsing="false" text="Merge With...">
+                                                               <items>
+                                                                  <MenuItem mnemonicParsing="false" text="EATab2" />
+                                                               </items>
+                                                            </Menu>
                                                          </items>
-                                                      </Menu>
-                                                   </items>
-                                                   <opaqueInsets>
-                                                      <Insets />
-                                                   </opaqueInsets>
-                                                </MenuButton>
+                                                         <opaqueInsets>
+                                                            <Insets />
+                                                         </opaqueInsets>
+                                                      </MenuButton>
+                                                   </children>
+                                                </StackPane>
                                              </children>
-                                          </StackPane>
-                                       </children>
-                                    </HBox>
-                                    <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
-                                       <children>
-                                          <StackPane prefHeight="150.0" prefWidth="200.0">
+                                          </HBox>
+                                          <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1">
                                              <children>
-                                                <Button mnemonicParsing="false" text="Start" />
-                                             </children>
-                                          </StackPane>
-                                          <StackPane prefHeight="150.0" prefWidth="200.0">
-                                             <children>
-                                                <MenuButton mnemonicParsing="false" text="Menu">
-                                                  <items>
-                                                    <MenuItem mnemonicParsing="false" text="Send To Server" />
-                                                      <Menu mnemonicParsing="false" text="Merge With...">
+                                                <StackPane prefHeight="150.0" prefWidth="200.0">
+                                                   <children>
+                                                      <Button mnemonicParsing="false" text="Start" />
+                                                   </children>
+                                                </StackPane>
+                                                <StackPane prefHeight="150.0" prefWidth="200.0">
+                                                   <children>
+                                                      <MenuButton mnemonicParsing="false" text="Menu">
                                                         <items>
-                                                          <MenuItem mnemonicParsing="false" text="EATab2" />
+                                                          <MenuItem mnemonicParsing="false" text="Send To Server" />
+                                                            <Menu mnemonicParsing="false" text="Merge With...">
+                                                              <items>
+                                                                <MenuItem mnemonicParsing="false" text="EATab2" />
+                                                              </items>
+                                                            </Menu>
                                                         </items>
-                                                      </Menu>
-                                                  </items>
-                                                   <opaqueInsets>
-                                                      <Insets />
-                                                   </opaqueInsets>
-                                                </MenuButton>
+                                                         <opaqueInsets>
+                                                            <Insets />
+                                                         </opaqueInsets>
+                                                      </MenuButton>
+                                                   </children>
+                                                </StackPane>
                                              </children>
-                                          </StackPane>
+                                          </HBox>
+                                          <Line endX="100.0" stroke="#b4b4b4" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
+                                          <VBox prefHeight="200.0" prefWidth="100.0">
+                                             <children>
+                                                <StackPane prefHeight="150.0" prefWidth="200.0">
+                                                   <children>
+                                                      <Label text="EATab1" />
+                                                   </children>
+                                                </StackPane>
+                                                <StackPane prefHeight="150.0" prefWidth="200.0">
+                                                   <children>
+                                                      <ProgressBar prefWidth="200.0" progress="0.0" />
+                                                   </children>
+                                                </StackPane>
+                                             </children>
+                                          </VBox>
+                                          <Line endX="100.0" stroke="#b4b4b4" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
+                                          <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
+                                             <children>
+                                                <StackPane prefHeight="150.0" prefWidth="200.0">
+                                                   <children>
+                                                      <Label text="EATab2" />
+                                                   </children>
+                                                </StackPane>
+                                                <StackPane prefHeight="150.0" prefWidth="200.0">
+                                                   <children>
+                                                      <ProgressBar prefWidth="200.0" progress="0.0" />
+                                                   </children>
+                                                </StackPane>
+                                             </children>
+                                          </VBox>
                                        </children>
-                                    </HBox>
-                                    <Line endX="100.0" stroke="#b4b4b4" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-                                    <VBox prefHeight="200.0" prefWidth="100.0">
-                                       <children>
-                                          <StackPane prefHeight="150.0" prefWidth="200.0">
-                                             <children>
-                                                <Label text="EATab1" />
-                                             </children>
-                                          </StackPane>
-                                          <StackPane prefHeight="150.0" prefWidth="200.0">
-                                             <children>
-                                                <ProgressBar prefWidth="200.0" />
-                                             </children>
-                                          </StackPane>
-                                       </children>
-                                    </VBox>
-                                    <Line endX="100.0" stroke="#b4b4b4" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-                                    <VBox prefHeight="200.0" prefWidth="100.0" GridPane.rowIndex="2">
-                                       <children>
-                                          <StackPane prefHeight="150.0" prefWidth="200.0">
-                                             <children>
-                                                <Label text="EATab2" />
-                                             </children>
-                                          </StackPane>
-                                          <StackPane prefHeight="150.0" prefWidth="200.0">
-                                             <children>
-                                                <ProgressBar prefWidth="200.0" />
-                                             </children>
-                                          </StackPane>
-                                       </children>
-                                    </VBox>
-                                 </children>
-                                 <padding>
-                                    <Insets left="5.0" right="5.0" />
-                                 </padding>
-                              </GridPane>
+                                       <padding>
+                                          <Insets left="5.0" right="5.0" />
+                                       </padding>
+                                    </GridPane>
+                                 </content></ScrollPane>
                            </children>
                            <padding>
                               <Insets top="5.0" />
