--- a/src/main/java/ui/controllers/gui.fxml
+++ b/src/main/java/ui/controllers/gui.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.*?>
 <?import ui.controllers.custom.*?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.FXController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="580.0" prefHeight="480.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ui.controllers.FXController">
    <children>
       <MenuBar fx:id="menuBar" prefWidth="968.0">
         <menus>
@@ -58,11 +57,111 @@
               <content>
                   <SplitPane dividerPositions="0.396875" prefHeight="160.0" prefWidth="200.0">
                     <items>
-                        <VBox maxWidth="250.0" minWidth="200.0" prefHeight="250.0" prefWidth="200.0" spacing="10.0">
+                        <VBox maxWidth="250.0" minWidth="200.0" prefHeight="250.0" prefWidth="200.0" spacing="5.0">
                            <children>
                               <StackPane>
                                  <children>
-                                    <Label text="Tabs" />
+                                    <Label text="Server Connection" />
+                                 </children>
+                              </StackPane>
+                              <GridPane hgap="10.0">
+                                <columnConstraints>
+                                  <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="56.0" minWidth="56.0" prefWidth="56.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="176.0" minWidth="10.0" prefWidth="175.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="20.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <Label text="Address:" />
+                                    <Label text="Accept:" GridPane.rowIndex="1" />
+                                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="3.0" GridPane.columnIndex="1">
+                                       <children>
+                                          <TextField fx:id="addressField" promptText="nornick3.zapto.org" HBox.hgrow="ALWAYS">
+                                             <font>
+                                                <Font size="10.0" />
+                                             </font>
+                                          </TextField>
+                                          <Label text=":" />
+                                          <TextField fx:id="portField" maxWidth="90.0" promptText="22">
+                                             <font>
+                                                <Font size="10.0" />
+                                             </font>
+                                          </TextField>
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="4.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                       <children>
+                                          <Label text="Evolution:">
+                                             <font>
+                                                <Font size="10.0" />
+                                             </font>
+                                          </Label>
+                                          <CheckBox fx:id="acceptEvolutions" mnemonicParsing="false" selected="true" />
+                                          <Label text="Benchmark:">
+                                             <font>
+                                                <Font size="10.0" />
+                                             </font>
+                                          </Label>
+                                          <CheckBox fx:id="acceptBenchmarks" mnemonicParsing="false" selected="true" />
+                                       </children>
+                                    </HBox>
+                                    <Label text="Status:" GridPane.rowIndex="4" />
+                                    <HBox alignment="CENTER_LEFT" spacing="9.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                                       <children>
+                                          <ProgressBar fx:id="serverStatusBar" prefWidth="50.0" progress="0.0" />
+                                          <TextField fx:id="serverStatusText" editable="false" maxWidth="1.7976931348623157E308">
+                                             <font>
+                                                <Font size="10.0" />
+                                             </font>
+                                          </TextField>
+                                       </children>
+                                    </HBox>
+                                    <Button fx:id="connectButton" mnemonicParsing="false" text="Connect" GridPane.columnSpan="2" GridPane.halignment="RIGHT" GridPane.rowIndex="2" />
+                                    <Line endX="100.0" stroke="#b4b4b4" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+                                 </children>
+                                 <VBox.margin>
+                                    <Insets left="5.0" right="5.0" />
+                                 </VBox.margin>
+                              </GridPane>
+                              <StackPane>
+                                 <children>
+                                    <Label text="Server Projects">
+                                       <StackPane.margin>
+                                          <Insets top="5.0" />
+                                       </StackPane.margin>
+                                    </Label>
+                                 </children>
+                              </StackPane>
+                              <ScrollPane fx:id="tabArea1" fitToWidth="true" hbarPolicy="NEVER">
+                                 <content>
+                                    <GridPane hgap="5.0" vgap="10.0">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <padding>
+                                          <Insets left="5.0" right="5.0" />
+                                       </padding>
+                                    </GridPane>
+                                 </content>
+                              </ScrollPane>
+                              <StackPane>
+                                 <children>
+                                    <Label text="Tabs">
+                                       <StackPane.margin>
+                                          <Insets top="5.0" />
+                                       </StackPane.margin></Label>
                                  </children>
                               </StackPane>
                               <ScrollPane fx:id="tabArea" fitToWidth="true" hbarPolicy="NEVER" VBox.vgrow="SOMETIMES">
@@ -172,9 +271,9 @@
                               <Insets top="5.0" />
                            </padding>
                         </VBox>
-                        <SplitPane dividerPositions="0.8544152744630071" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
+                        <SplitPane dividerPositions="0.85" minWidth="380.0" orientation="VERTICAL" prefHeight="200.0" prefWidth="160.0">
                           <items>
-                              <GridPane>
+                              <GridPane minWidth="380.0">
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -184,7 +283,7 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <AreaChart fx:id="memoryGraph" animated="false" createSymbols="false" title="Memory" verticalZeroLineVisible="false">
+                                    <AreaChart fx:id="memoryGraph" animated="false" createSymbols="false" minWidth="190.0" title="Memory" verticalZeroLineVisible="false">
                                       <xAxis>
                                         <NumberAxis side="BOTTOM" />
                                       </xAxis>
@@ -192,7 +291,7 @@
                                         <NumberAxis side="LEFT" />
                                       </yAxis>
                                     </AreaChart>
-                                    <AreaChart fx:id="cpuGraph" animated="false" createSymbols="false" title="CPU" verticalZeroLineVisible="false" GridPane.columnIndex="1">
+                                    <AreaChart fx:id="cpuGraph" animated="false" createSymbols="false" minWidth="190.0" title="CPU" verticalZeroLineVisible="false" GridPane.columnIndex="1">
                                        <xAxis>
                                           <NumberAxis side="BOTTOM" />
                                        </xAxis>
@@ -200,7 +299,15 @@
                                           <NumberAxis side="LEFT" />
                                        </yAxis>
                                     </AreaChart>
-                                    <AreaChart fx:id="threadGraph" animated="false" createSymbols="false" title="Threads" verticalZeroLineVisible="false" GridPane.rowIndex="1">
+                                    <AreaChart fx:id="threadGraph" animated="false" createSymbols="false" minWidth="190.0" title="Threads" verticalZeroLineVisible="false" GridPane.rowIndex="1">
+                                       <xAxis>
+                                          <NumberAxis side="BOTTOM" />
+                                       </xAxis>
+                                       <yAxis>
+                                          <NumberAxis side="LEFT" />
+                                       </yAxis>
+                                    </AreaChart>
+                                    <AreaChart fx:id="vTabGraph" animated="false" createSymbols="false" minWidth="190.0" title="Virtual Tab Data" verticalZeroLineVisible="false" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                        <xAxis>
                                           <NumberAxis side="BOTTOM" />
                                        </xAxis>
@@ -210,17 +317,12 @@
                                     </AreaChart>
                                  </children>
                               </GridPane>
-                              <GridPane>
-                                <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                </columnConstraints>
-                                <rowConstraints>
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                </rowConstraints>
-                              </GridPane>
+                              <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0">
+                                <items>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" />
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="40.0" />
+                                </items>
+                              </SplitPane>
                           </items>
                         </SplitPane>
                     </items>
